--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <table cellspacing=20>
     <tr>
 
-      <td><img src="images/amynat.png" alt="amynat18 profile picture">
+      <td><img src="amynat.png" alt="">
   </td>
       <td><h1>Hazzan Amynat</h1>
       <p><em>Founder and cto of <strong>this homepage.</strong>.</em></p>
