--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <table cellspacing=20>
     <tr>
 
-      <td><img src="amynat.png" alt="">
+      <td><img src="amynat.png" alt="https://github.com/amynat02/cv/blob/main/amynat.png?raw=true">
   </td>
       <td><h1>Hazzan Amynat</h1>
       <p><em>Founder and cto of <strong>this homepage.</strong>.</em></p>
