--- a/contact me.html
+++ b/contact me.html
@@ -5,9 +5,8 @@
     <title>Contact detaiils</title>
   </head>
   <body>
-    <p>My Whatsapp number</p>
-    <p>+2348154210988</p>
-    <p>Email address - amynat1122@gmail.com</p>
+    <p>Email Address</p>
+    <p> amynat1122@gmail.com</p>
 <hr>
     <form  action="mailto:amynat1122@gmail.com" method="post" enctype="text/plain">
       <label>Your name:</label>
